Modules/VirtualNetwork/vnetdeploy.json
{
  "$schema": "https://schema.management.azure.com/schemas/2019-04-01/deploymentTemplate.json#",
  "contentVersion": "1.0.0.0",
  "parameters": {
    "virtualNetworkName": {
      "type": "string",
      "defaultValue": "PerfectVM-Networks",
      "metadata": {
        "description": "API Subnet Name"
      }
    },
    "addressPrefix": {
      "type": "string",
      "defaultValue": "10.99.0.0/16",
      "metadata": {
        "description": "Address prefix"
      }
    },
    "apiSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.99.99.0/24",
      "metadata": {
        "description": "Development subnet Prefix"
      }
    },
    "apiSubnetName": {
      "type": "string",
      "defaultValue": "PerfectVM-dev",
      "metadata": {
        "description": "API Subnet Name"
      }
    },
    "apiNsgName": {
      "type": "string",
      "defaultValue": "Perfectvm-dev-NSG",
      "metadata": {
        "description": "API NSG Name"
      }
    },
    "dbSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.99.200.0/24",
      "metadata": {
        "description": "Production subnet Prefix"
      }
    },
    "dbSubnetName": {
      "type": "string",
      "defaultValue": "PerfectVM-prod",
      "metadata": {
        "description": "db Subnet Name"
      }
    },
    "dbNsgName": {
      "type": "string",
      "defaultValue": "Perfectvm-prod-NSG",
      "metadata": {
        "description": "db NSG Name"
      }
    },
    "appSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.99.200.0/24",
      "metadata": {
        "description": "app subnet Prefix"
      }
    },
    "appSubnetName": {
      "type": "string",
      "defaultValue": "PerfectVM-prod",
      "metadata": {
        "description": "app Subnet Name"
      }
    },
    "bastionSubnetPrefix": {
      "type": "string",
      "defaultValue": "10.99.200.0/24",
      "metadata": {
        "description": "app subnet Prefix"
      }
    },
    "bastionSubnetName": {
      "type": "string",
      "defaultValue": "PerfectVM-prod",
      "metadata": {
        "description": "app Subnet Name"
      }
    },
    "bastion-host-name": {
      "type": "string",
      "defaultValue":"bascasestudy001",
      "metadata": {
        "description": "Name of Azure Bastion resource"
      }
    },
    "natgatewayname": {
      "defaultValue": "myNATgateway",
      "type": "String",
      "metadata": {
        "description": "Name of the NAT gateway"
      }
    },
    "publicipname": {
      "defaultValue": "myPublicIP",
      "type": "String",
      "metadata": {
        "description": "Name of the NAT gateway public IP"
      }
    },
    "location": {
      "type": "string",
      "defaultValue": "[resourceGroup().location]",
      "metadata": {
        "description": "Location for all resources."
      }
    }
  },
  "variables": {
    "public-ip-address-name": "[concat(parameters('bastion-host-name'),'-pip')]"
  },
  "resources": [
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/publicIpAddresses",
      "name": "[variables('public-ip-address-name')]",
      "location": "[parameters('location')]",
      "sku": {
          "name": "Standard"
      },
      "properties": {
          "publicIPAllocationMethod": "Static"
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('apiNsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
          {
            "name": "allow_ssh_in",
            "properties": {
              "description": "SSH needed for development and preparations",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_http_in",
            "properties": {
              "description": "HTTP needed for website provided",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 666,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_port_3000_in",
            "properties": {
              "description": "Opening port 3000",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "3000",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/networkSecurityGroups",
      "name": "[parameters('dbNsgName')]",
      "location": "[parameters('location')]",
      "properties": {
        "securityRules": [
           {
            "name": "allow_ssh_in",
            "properties": {
              "description": "SSH needed for development and preparations",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "22",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 300,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_http_in",
            "properties": {
              "description": "HTTP needed for website provided",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "80",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 666,
              "direction": "Inbound"
            }
          },
          {
            "name": "allow_port_27017_in",
            "properties": {
              "description": "Opening port 27017",
              "protocol": "Tcp",
              "sourcePortRange": "*",
              "destinationPortRange": "27017",
              "sourceAddressPrefix": "*",
              "destinationAddressPrefix": "*",
              "access": "Allow",
              "priority": 100,
              "direction": "Inbound"
            }
          }
        ]
      }
    },
    {
      "type": "Microsoft.Network/publicIPAddresses",
      "apiVersion": "2020-06-01",
      "name": "[parameters('publicipname')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "properties": {
        "publicIPAddressVersion": "IPv4",
        "publicIPAllocationMethod": "Static",
        "idleTimeoutInMinutes": 4
      }
    },
    {
      "type": "Microsoft.Network/natGateways",
      "apiVersion": "2020-06-01",
      "name": "[parameters('natgatewayname')]",
      "location": "[parameters('location')]",
      "sku": {
        "name": "Standard"
      },
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicipname'))]"
      ],
      "properties": {
        "idleTimeoutInMinutes": 4,
        "publicIpAddresses": [
          {
            "id": "[resourceId('Microsoft.Network/publicIPAddresses', parameters('publicipname'))]"
          }
        ]
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/virtualNetworks",
      "name": "[parameters('virtualNetworkName')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('apiNsgName'))]",
        "[resourceId('Microsoft.Network/networkSecurityGroups/', parameters('dbNsgName'))]",
        "[resourceId('Microsoft.Network/natGateways', parameters('natgatewayname'))]"
      ],
      "properties": {
        "addressSpace": {
          "addressPrefixes": [
            "[parameters('addressPrefix')]"
          ]
        },
        "subnets": [
          {
            "name": "[parameters('apiSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('apiSubnetPrefix')]",
              "natGateway": {
                "id":"[resourceId('Microsoft.Network/natGateways', parameters('natgatewayname'))]"
              },
              "serviceEndpoints": [
                {
                "service": "Microsoft.ContainerRegistry",
                "locations": ["*"]
                },
                {
                "service": "Microsoft.Storage",
                "locations": ["northeurope",
                              "westeurope"
                            ]
                },
                {
                "service": "Microsoft.KeyVault",
                "locations": ["*"]     
                }
              ],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies":"Enabled",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('apiNsgName'))]"
              }
            }
          },
          {
            "name": "[parameters('dbSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('dbSubnetPrefix')]",
              "serviceEndpoints": [
                {
                "service": "Microsoft.ContainerRegistry",
                "locations": ["*"]
                },
                {
                "service": "Microsoft.Storage",
                "locations": ["northeurope",
                              "westeurope"
                            ]
                },
                {
                "service": "Microsoft.KeyVault",
                "locations": ["*"]     
                }
              ],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies":"Enabled",
              "networkSecurityGroup": {
                "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('dbNsgName'))]"
              }
            }
          },
          {
            "name": "[parameters('appSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('appSubnetPrefix')]",
                            "serviceEndpoints": [
                {
                "service": "Microsoft.ContainerRegistry",
                "locations": ["*"]
                },
                {
                "service": "Microsoft.Storage",
                "locations": ["northeurope",
                              "westeurope"
                            ]
                },
                {
                "service": "Microsoft.KeyVault",
                "locations": ["*"]     
                }
              ],
              "delegations": [
                {
                  "name":"delegation",
                  "properties": {
                    "serviceName": "Microsoft.Web/serverfarms"
                  }
                }
              ],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies":"Enabled"
            }
          },
          {
            "name": "[parameters('bastionSubnetName')]",
            "properties": {
              "addressPrefix": "[parameters('bastionSubnetPrefix')]",
              "serviceEndpoints": [
                {
                "service": "Microsoft.ContainerRegistry",
                "locations": ["*"]
                },
                {
                "service": "Microsoft.Storage",
                "locations": ["northeurope",
                              "westeurope"
                            ]
                },
                {
                "service": "Microsoft.KeyVault",
                "locations": ["*"]     
                },
                {
                "service": "Microsoft.Web",
                "locations": ["*"]     
                }
              ],
              "privateEndpointNetworkPolicies": "Enabled",
              "privateLinkServiceNetworkPolicies":"Enabled"
            }
          }

        ]
      }
    },
    {
      "apiVersion": "2020-05-01",
      "type": "Microsoft.Network/bastionHosts",
      "name": "[parameters('bastion-host-name')]",
      "location": "[parameters('location')]",
      "dependsOn": [
        "[resourceId('Microsoft.Network/publicIpAddresses', variables('public-ip-address-name'))]",
        "[resourceId('Microsoft.Network/virtualNetworks', parameters('virtualNetworkName'))]"
      ],
      "properties": {
        "ipConfigurations": [
          {
            "name": "IpConf",
            "properties": {
              "subnet": {
                "id": "[resourceId('Microsoft.Network/virtualNetworks/subnets', parameters('virtualNetworkName'), parameters('bastionSubnetName'))]"
              },
              "publicIPAddress": {
                "id": "[resourceId('Microsoft.Network/publicIpAddresses', variables('public-ip-address-name'))]"
              }
            }
          }
        ]
      }
    }
  ]
}
